Prevented card link overlay z-indexing out of parent element

--- a/assets/scss/modular/_card.scss
+++ b/assets/scss/modular/_card.scss
@@ -10,6 +10,7 @@
 	justify-content: space-between;
 	transition: box-shadow .3s ease;
 	margin-bottom: spacing(2);
+	z-index: 0;
 
 	@include mq(M) {
 		margin-bottom: spacing(4);
